--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
 /**
- * Author:           BeiYuu
- * Contact:          beiyuu.com
+ * Author:           lwarrior
+ * Contact:          lchangliang@gmail.com
  */
 
 /* 重置浏览器CSS */
