--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     <meta name="author" content="LiuChangliang" />
     <meta name="renderer" content="webkit">
-    <meta name="description" content="BeiYuu's Blog" />
+    <meta name="description" content="LWarrior's Blog" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="/css/default.css" type="text/css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -23,7 +23,7 @@
             <a class="home-follow" href="#" title="Contact Me">+</a>
         </div>
         <div class="home-contact">
-            <a href="http://www.baidu.com" target="_blank" style="margin-left:-5px;">
+            <a href="http://lwarrior.github.io" target="_blank" style="margin-left:-5px;">
             </a>
         </div>
     </div>
