--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,14 @@
 ---
-layout:           default
+layout: default
 ---
+<article class="post">
 
-<div id="content">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
+
+  <div class="post-content">
     {{ content }}
-</div>
+  </div>
+
+</article>
